<resources>
    <string name="app_name">GameLab</string>
    <string name="title_home">Menu</string>
    <string name="title_dashboard">Scoreboard</string>
    <string name="title_notifications">About</string>
    <string name="win_message">Good job! You won this game!</string>
    <string name="loss_message">Oops! You lost this game. Try again!</string>
    <string name="title_activity_minesweeper">Minesweeper</string>
    <string name="level_easy">Easy</string>
    <string name="level_medium">Medium</string>
    <string name="level_hard">Hard</string>
    <string name="level_picker">Pick your preferred level for this game:</string>
    <string name="new_game">Start The Game</string>
    <string name="title_activity_minesweeper_game">Minesweeper</string>
    <string name="about_text"><b>Thanks for stopping by!</b> This application was created by Infinitum Industries.
        Copyright 2018. \n\n<b>Scoring Methodologies:</b> \n\nFor Minesweeper, the score of the player is determined
        as a ratio of the number of mines to the total elapsed time of the game, with a level multiplier
        applied. The multiplier is 1 for easy, 2 for medium, and 3 for hard. An additional multiplier of 4 is applied
        to all scores, and then floor rounding is applied to the resulting score. The 3BV score of the board instance
        is not calculated. \n\nBoggle is scored according to traditional rules:
    </string>
    <string name="about_text_2">\n\n
        <b>About the Author</b>\n\nThis project was intended as a proof-of-concept in Android development for
        a Computer Science undergrad. Find out more about their work on their <a href="https://lizzy.wiki/" target="_blank">
            website
        </a>.
        \n\n<b>Credits and Acknowledgements:</b>
        \n\nSeveral individuals were instrumental in the development and testing process of this application.
        <a href="https://github.com/Yas-Elak" target="_blank">@Yas-Elak</a> provided unsolicited help (the best kind of help).
        <a href="https://github.com/booellean" target="_blank">@MissElle</a> offered valuable UI feedback and general encouragement.
        The Boggle implementation would not have been possible without an existing "dictionary" of
        English language words; this implementation uses a variation of the Official Tournament and Club Word List,
        which was sourced from a project by the GitHub user <a href="https://gist.github.com/mrflip/1516fa9e28c421a2f71e" target="_blank">
            mrflip
        </a>.
        The launcher icon is made by <a href="https://www.freepik.com/" target="_blank">Freepik</a>
        from <a href="https://www.flaticon.com/" target="_blank">www.flaticon.com</a>. Cheers!
    </string>
    <string name="about_bullet_1">Words with fewer than 3 letters do not earn any points.</string>
    <string name="about_bullet_2">3 or 4 letters: 1 point</string>
    <string name="about_bullet_3">5 letters: 2 points</string>
    <string name="about_bullet_4">6 letters: 3 points</string>
    <string name="about_bullet_5">7 letters: 5 points</string>
    <string name="about_bullet_6">8+ letters: 11 points</string>
    <string name="about_bullet_7">The "Qu" letter combination counts as two letters.</string>
    <string name="about_bullet_8">Repeated words are not counted towards the score, even if they are composed from a different distinct combination of tiles.</string>
    <string name="title_activity_about_page">About Page</string>
    <string name="title_activity_main">Scoreboard</string>
    <string name="title_activity_scoreboard">Scoreboard</string>
    <string name="title_activity_tic_tac_toe_menu">Tic-Tac-Toe</string>
    <string name="title_activity_tic_tac_toe_model">Tic-Tac-Toe</string>
    <string name="start_game">When you\'re ready, press "Start Game" to begin.</string>
    <string name="stalemate_message">Lol. Nobody won!</string>
    <string name="ttt_x_won">X won the game! Good job X\'ers!</string>
    <string name="ttt_o_won">O won the game! Good job O\'ers!</string>
    <string name="top_score">You also got a top score! Enter your name here to be added to the leaderboard:</string>
    <string name="anon">Anonymous</string>
    <string name="ms_scores_title">Minesweeper Scores</string>
    <string name="ttt_scores_title">Tic-Tac-Toe Scores</string>
    <string name="title_activity_boggle__game">Boggle</string>
    <string name="boggle_timer">Timer:</string>
    <string name="boggle_get_hint">Get Hint</string>
    <string name="boggle_bad_word">That was not a valid word. Try again.</string>
    <string name="boggle_duplicate_word">You already added that word in this game. Try again.</string>
    <string name="boggle_word_added">Word added.</string>
    <string name="title_activity_snake_game">Snake</string>
    <string name="snake_game_over">Game Over</string>
    <string name="snake_up">Up</string>
    <string name="snake_down">Down</string>
    <string name="snake_left">Left</string>
    <string name="snake_right">Right</string>
    <string name="splash_text">Infinitum Industries</string>

</resources>
