<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.lizzy.gamelab.Minesweeper_menu"
    tools:showIn="@layout/activity_minesweeper">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent1"
        android:divider="@drawable/spacer_medium"
        android:showDividers="middle"
        android:padding="@dimen/spacing_medium">

        <LinearLayout
            android:id="@+id/level_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/newcell"
            android:divider="@drawable/spacer_medium"
            android:showDividers="middle"
            android:padding="@dimen/spacing_medium">

                <TextView
                    android:id="@+id/ms_game_level_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/level_picker"
                    />

                <Button
                    android:id="@+id/level_easy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/level_easy"/>

                <Button
                    android:id="@+id/level_med"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/level_medium"/>

                <Button
                    android:id="@+id/level_hard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/level_hard"/>

                <TextView
                    android:id="@+id/ms_game_level_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Select a level to see a hint about difficulty."
                    />
            </LinearLayout>



        <LinearLayout
            android:layout_below="@+id/level_picker"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="@drawable/spacer_medium"
            android:showDividers="middle"
            android:padding="@dimen/spacing_medium"
            android:background="@color/newcell">
            <TextView
                android:id="@+id/start_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_game"
                />
            <Button
                android:id="@+id/new_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_game"/>

        </LinearLayout>



    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
