<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.lizzy.gamelab.Scoreboard"
    tools:showIn="@layout/activity_scoreboard">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/spacing_medium"
            android:divider="@drawable/spacer_medium"
            android:showDividers="middle">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_minesweeper"
                    android:padding="@dimen/spacing_medium"
                    android:textColor="@color/ms7"
                    android:background="@color/colorAccent1"/>
                <TableLayout
                    android:id="@+id/ms_score_table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_medium"
                    android:stretchColumns="*"
                    android:shrinkColumns="*" >
                </TableLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_boggle__game"
                    android:padding="@dimen/spacing_medium"
                    android:textColor="@color/ms7"
                    android:background="@color/colorAccent3"/>
                <TableLayout
                    android:id="@+id/boggle_score_table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_medium"
                    android:stretchColumns="*"
                    android:shrinkColumns="*">
                </TableLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_snake_game"
                    android:padding="@dimen/spacing_medium"
                    android:textColor="@color/ms7"
                    android:background="@color/colorAccent4"/>
                <TableLayout
                    android:id="@+id/snake_score_table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_medium"
                    android:stretchColumns="*"
                    android:shrinkColumns="*">
                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_tic_tac_toe_model"
                    android:padding="@dimen/spacing_medium"
                    android:textColor="@color/ms7"
                    android:background="@color/colorAccent2"/>
                <TableLayout
                    android:id="@+id/ttt_score_table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_medium"
                    android:stretchColumns="*"
                    android:shrinkColumns="*">
                </TableLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
